<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/business_hours_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/aboutUsHeadingsStyle"
        android:text="@string/business_hours_label"/>

    <TextView
        android:id="@+id/business_hours_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/aboutUsParagraphStyle"
        android:text="@string/business_hours_tv"
        />

    <TextView
        android:id="@+id/address_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/aboutUsHeadingsStyle"
        android:text="@string/address"/>

    <TextView
        android:id="@+id/address_value_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_value"
        style="@style/aboutUsParagraphStyle"/>

    <TextView
        android:id="@+id/contact_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/aboutUsHeadingsStyle"
        android:text="@string/contact_label"/>

    <TextView
        android:id="@+id/web_site_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/aboutUsParagraphStyle"
        android:textColor="@color/blue"
        android:onClick="onClick"
        android:clickable="true"
        android:text="@string/web_site"/>

    <TextView
        android:id="@+id/tel_number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/aboutUsParagraphStyle"
        android:textColor="@color/blue"
        android:onClick="onClick"
        android:clickable="true"
        android:text="@string/tel_number"/>

    <TextView
        android:id="@+id/email_adress_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/aboutUsParagraphStyle"
        android:text="@string/email_address"/>

</LinearLayout>