<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.flowerstore.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.flowerstore.ui.gallery.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.flowerstore.ui.slideshow.CartFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.flowerstore.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.flowerstore.ui.share.ShareFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/nav_order"
        android:name="com.example.flowerstore.ui.send.OrderFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_payment"
        android:name="com.example.flowerstore.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_payment" />
</navigation>