<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lightBackground">


    <TextView
        android:id="@+id/flower_favorite_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/flower_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/med_dimension"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/flower_image_favorite_iv"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/flower_image_favorite_iv"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerInside"
        android:src="@drawable/welcome_flower"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/price_favorite_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="@dimen/small_dimension"
        app:layout_constraintStart_toEndOf="@id/flower_image_favorite_iv"
        app:layout_constraintTop_toBottomOf="@+id/flower_favorite_name_tv" />

    <TextView
        android:id="@+id/price_value_favorite_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="80dp"
        android:text="3000000 $"
        android:textColor="@color/darkSilver"
        android:textSize="@dimen/small_dimension"
        app:layout_constraintStart_toEndOf="@id/price_favorite_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/flower_favorite_name_tv" />

    <TextView
        android:id="@+id/flower_description_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="20dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="@dimen/small_dimension"
        app:layout_constraintStart_toEndOf="@id/flower_image_favorite_iv"
        app:layout_constraintTop_toBottomOf="@id/price_favorite_tv" />

    <TextView
        android:id="@+id/flower_description_value_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/description_value"
        android:textColor="@color/darkSilver"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/flower_image_favorite_iv"
        app:layout_constraintStart_toStartOf="parent"
       />

    <ImageButton
        android:id="@+id/delete_favorite_im"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>