<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/flower_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/flower_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/med_dimension"
        app:layout_constraintStart_toEndOf="@+id/flower_image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/flower_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:scaleType="centerInside"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/welcome_flower"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="@dimen/small_dimension"
        app:layout_constraintStart_toEndOf="@+id/flower_image"
        app:layout_constraintTop_toBottomOf="@+id/flower_name" />

    <TextView
        android:id="@+id/price_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="3000000 $"
        android:textColor="@color/darkSilver"
        android:textSize="@dimen/small_dimension"
        app:layout_constraintStart_toEndOf="@+id/price"
        app:layout_constraintTop_toBottomOf="@+id/flower_name" />

    <TextView
        android:id="@+id/pieces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/pieces"
        android:textColor="@color/black"
        android:textSize="@dimen/small_dimension"
        app:layout_constraintStart_toEndOf="@+id/flower_image"
        app:layout_constraintTop_toBottomOf="@+id/flower_name" />

    <Spinner
        android:id="@+id/pieces_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/pieces"
        app:layout_constraintTop_toBottomOf="@+id/price_value" />

    <ImageView
        android:id="@+id/favorite_image"
        android:layout_width="48dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="9dp"
        android:src="@drawable/favorite"
        app:layout_constraintStart_toEndOf="@+id/flower_image"
        app:layout_constraintTop_toBottomOf="@+id/pieces" />

    <ImageView
        android:id="@+id/add_to_cart"
        android:layout_width="48dp"
        android:layout_height="54dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="9dp"
        android:src="@drawable/add_to_cart"
        app:layout_constraintStart_toEndOf="@+id/favorite_image"
        app:layout_constraintTop_toBottomOf="@+id/pieces" />

</androidx.constraintlayout.widget.ConstraintLayout>